[gd_scene load_steps=4 format=3 uid="uid://bbhp4ex67ul34"]

[ext_resource type="Script" uid="uid://cipesjqk8e6is" path="res://Scripts/enemy_tiger.gd" id="1_gxmv7"]
[ext_resource type="Texture2D" uid="uid://bokghfd0xdlel" path="res://Resources/crab.png" id="2_klu1n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxdv4"]
size = Vector2(20.8, 9.4)

[node name="EnemyTiger" type="CharacterBody2D"]
process_mode = 1
scale = Vector2(5, 5)
script = ExtResource("1_gxmv7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_klu1n")
region_enabled = true
region_rect = Rect2(224, 16, 32, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.4, 3.5)
shape = SubResource("RectangleShape2D_xxdv4")

[node name="LungeChargeUp" type="Timer" parent="."]
one_shot = true

[node name="AttackingTimer" type="Timer" parent="."]

[connection signal="timeout" from="LungeChargeUp" to="." method="_on_lunge_charge_up_timeout"]
